--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X</title>
+    <title>X clone - Nkosiyethu</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css"> 
+    <link rel="icon" href="./assets/X_logo_2023.svg.png" type="image/png">
+
     
 </head>
 <body>
