new updated code

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <p>Nkosiyethu</p>
               <p>Nkosiyethu</p>
             </div>
-            <i class="bi bi-three-dots"></i>
+            <i id="dots" class="bi bi-three-dots"></i>
           </a>
         </div>
       </div>
