--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link rel="shortcut icon" href="./assets/X_logo.jpg" type="image/x-icon" />
 
     <title>x.com/home</title>
